fixed button alignment for mobiles

--- a/src/styles/wordle.module.css
+++ b/src/styles/wordle.module.css
@@ -17,45 +17,45 @@
     background-color: yellow;
 }
 
-/* Form CSS */
-.form {
-    position: relative;
-    width: fit-content;
-    color: lightskyblue;
-    /* Adjust as necessary */
+.button-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 10px;
+    /* Optional: adds spacing between buttons */
+    justify-content: center;
 }
 
-.underscoreContainer {
+.button-container .button-row {
+    width: 100%;
     display: flex;
-    gap: 8px;
-    position: relative;
-    /* Adjust spacing between underscores */
+    justify-content: center;
+    /* Center the second row horizontally */
+    gap: 10px;
 }
 
 .underscore {
     width: 20px;
-    /* Adjust width of each underscore */
     height: 30px;
-    /* Adjust height of each underscore */
-    /* border-bottom: 2px solid lightskyblue; */
-    /* Style of the underscore */
     text-align: center;
     font-size: 24px;
     color: lightskyblue;
-    /* Adjust font size of characters */
     line-height: 30px;
-    /* Center the character vertically */
 }
 
-.input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    z-index: 1;
-    color: black;
-    caret-color: black;
-    /* Make the caret (cursor) visible */
+.game-row1 {
+    display: flex;
+    flex-wrap: wrap;
+    /* Allows the buttons to wrap */
+    gap: 10px;
+    /* Adds spacing between buttons */
+    justify-content: center;
+}
+
+
+
+.game-row1>*:nth-child(n) {
+    /* width: 100%; */
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
